--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h3 class="greet-heading">Hello, I'm</h3>
                 <h1 class="my-heading">Leonard Phokane</h1>
                 <h4 class="sub-heading">
-                    A Software Engineer with 3 years of Experience.
+                    I'm a web developer with experience in HTML, CSS, and JavaScript.
                 </h4>
             </div>
             <div class="intro-buttons">
@@ -90,7 +90,7 @@
                                  alt="Web Design Image">
                         </div>
                         <h3 class="greet-heading blue-text">Web Design</h3>
-                        <p class="small-para blue-text">Designing</p>
+                        <p class="small-para blue-text">I design user-friendly and visually appealing websites.</p>
                     </div>
                 </div>
                 <div class="my-col">
@@ -102,7 +102,7 @@
                         <h3 class="greet-heading blue-text">
                               Web Development
                           </h3>
-                        <p class="small-para blue-text">Development</p>
+                        <p class="small-para blue-text">I create responsive and dynamic websites.</p>
                     </div>
                 </div>
                 <div class="my-col">
@@ -385,9 +385,9 @@
                     <input class="form-controls" type="text" 
                            placeholder="My Email">
                     <input class="form-controls" type="text" 
-                           placeholder="+27723507514">
+                           placeholder="My Contact">
                     <textarea class="form-controls" 
-                              placeholder="Write your message" 
+                              placeholder="Thanks for visiting my website" 
                               name="message" id="" cols="30"
                               rows="10">
                       </textarea>
